--- a/charts/kafka/templates/pvc.yaml
+++ b/charts/kafka/templates/pvc.yaml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: kafka
+  labels:
+    app: kafka
 spec:
   storageClassName: {{ .Values.persistence.storageClass }}
-  accessModes: {{ .Values.persistence.accessModes }}
+  accessModes: {{ .Values.persistence.accessModes | toYaml | nindent 4 }}
   resources:
     requests:
       storage: {{ .Values.persistence.size }}
