--- a/charts/kafka/templates/service.yaml
+++ b/charts/kafka/templates/service.yaml
@@ -2,13 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka
+  labels:
+    app: kafka
 spec:
   type: NodePort
   ports:
     - name: broker
-      port: {{ .Values.port.broker }}
-      targetPort: {{ .Values.port.broker }}
-      nodePort: {{ .Values.nodePort }}
+      port: {{ .Values.ports.broker }}
+      targetPort: {{ .Values.ports.broker }}
+      nodePort: {{ .Values.ports.external.nodePort }}
   selector:
     app: kafka
 ---
@@ -16,15 +18,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka-headless
+  labels:
+    app: kafka
 spec:
   type: ClusterIP
   clusterIP: None
+  publishNotReadyAddresses: true
   ports:
     - name: broker
-      port: {{ .Values.port.broker }}
-      targetPort: {{ .Values.port.broker }}
+      port: {{ .Values.ports.broker }}
+      targetPort: {{ .Values.ports.broker }}
     - name: controller
-      port: {{ .Values.port.controller }}
-      targetPort: {{ .Values.port.controller }}
+      port: {{ .Values.ports.controller }}
+      targetPort: {{ .Values.ports.controller }}
   selector:
     app: kafka
