--- a/charts/kafka/templates/configmap.yaml
+++ b/charts/kafka/templates/configmap.yaml
@@ -6,4 +6,5 @@ metadata:
     app: kafka
 data:
   clusterId: {{ .Values.cluster.id | quote }}
-  log4j2.properties: {{ .Values.log4j.config | nindent 4 }}
+  log4j2.properties: |
+    {{- .Values.log4j.config | nindent 4 }}
