--- a/charts/kafka/templates/pv.yaml
+++ b/charts/kafka/templates/pv.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   capacity:
     storage: {{ .Values.persistence.size }}
-  accessModes: {{ .Values.persistence.accessModes | toYaml | nindent 4 }}
+  accessModes:
+    {{- toYaml .Values.persistence.accessModes | nindent 4 }}
   persistentVolumeReclaimPolicy: Retain
   storageClassName: {{ .Values.persistence.storageClass }}
   local:
