--- a/charts/kafka/templates/service.yaml
+++ b/charts/kafka/templates/service.yaml
@@ -11,6 +11,7 @@ spec:
       port: {{ .Values.ports.broker }}
       targetPort: {{ .Values.ports.broker }}
       nodePort: {{ .Values.ports.external.nodePort }}
+      protocol: TCP
   selector:
     app: kafka
 ---
@@ -28,8 +29,10 @@ spec:
     - name: broker
       port: {{ .Values.ports.broker }}
       targetPort: {{ .Values.ports.broker }}
+      protocol: TCP
     - name: controller
       port: {{ .Values.ports.controller }}
       targetPort: {{ .Values.ports.controller }}
+      protocol: TCP
   selector:
     app: kafka
