--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -18,13 +18,32 @@ spec:
       labels:
         app: kafka
     spec:
-      serviceAccountName: {{ .Values.serviceAccount.name | default "kafka" }}
-      securityContext: {{ .Values.podSecurityContext | toYaml | nindent 8 }}
+      serviceAccountName: {{ .Values.serviceAccount.name }}
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      initContainers:
+        - name: init-kafka-data
+          image: busybox:latest
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              mkdir -p /kafka/data/logs
+              chown -R 1000:1000 /kafka/data
+          volumeMounts:
+            - name: kafka-data
+              mountPath: /kafka/data
+          securityContext:
+            runAsUser: 0
       containers:
         - name: kafka
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          securityContext: {{ .Values.containerSecurityContext | toYaml | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.containerSecurityContext | nindent 12 }}
           ports:
             - name: broker
               containerPort: {{ .Values.ports.broker }}
@@ -62,9 +81,8 @@ spec:
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
               value: "-Dlog4j2.configurationFile=file:/kafka/config/log4j2.properties"
-            - name: KAFKA_OPTS
-              value: "-Xlog:disable"
-          resources: {{ .Values.resources | toYaml | nindent 12 }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
           readinessProbe:
             tcpSocket:
               port: {{ .Values.ports.broker }}
@@ -85,18 +103,14 @@ spec:
           command: ["/bin/bash", "-c"]
           args:
             - |
-              # Ensure data directory exists with correct permissions
-              mkdir -p /kafka/data /kafka/data/logs
-              chown -R 1001:1001 /kafka/data
               # Copy log4j configuration from ConfigMap
-              cp /kafka/config/log4j2.properties /kafka/data/log4j2.properties
-              chown 1001:1001 /kafka/data/log4j2.properties
+              cp /kafka/config/log4j2.properties /opt/kafka/config/log4j2.properties
               # Format storage if meta.properties does not exist
               if [ ! -f /kafka/data/meta.properties ]; then
-                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/kraft/server.properties
+                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/server.properties
               fi
-              # Start Kafka server
-              exec /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties \
+              # Start Kafka server with Confluent overrides
+              exec /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/server.properties \
                 --override process.roles=$KAFKA_PROCESS_ROLES \
                 --override node.id=$KAFKA_NODE_ID \
                 --override listeners=$KAFKA_LISTENERS \
@@ -113,17 +127,20 @@ spec:
       {{- if .Values.persistence.enabled }}
         - name: kafka-data
           persistentVolumeClaim:
-            claimName: kafka
+            claimName: kafka-pvc
       {{- else }}
         - name: kafka-data
           emptyDir: {}
       {{- end }}
-      {{- if .Values.nodeSelector }}
-      nodeSelector: {{ .Values.nodeSelector | toYaml | nindent 8 }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if .Values.affinity }}
-      affinity: {{ .Values.affinity | toYaml | nindent 8 }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if .Values.tolerations }}
-      tolerations: {{ .Values.tolerations | toYaml | nindent 8 }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
