--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -32,7 +32,8 @@ spec:
           args:
             - |
               mkdir -p /kafka/data/logs
-              chown -R 1000:1000 /kafka/data
+              chmod -R 770 /kafka/data
+              ls -ld /kafka/data /kafka/data/logs
           volumeMounts:
             - name: kafka-data
               mountPath: /kafka/data
@@ -81,6 +82,8 @@ spec:
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
               value: "-Dlog4j2.configurationFile=file:/kafka/config/log4j2.properties"
+            - name: KAFKA_OPTS
+              value: ""
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           readinessProbe:
@@ -103,13 +106,12 @@ spec:
           command: ["/bin/bash", "-c"]
           args:
             - |
-              # Copy log4j configuration from ConfigMap
               cp /kafka/config/log4j2.properties /opt/kafka/config/log4j2.properties
-              # Format storage if meta.properties does not exist
+              mkdir -p /kafka/data/logs
+              chmod -R 770 /kafka/data/logs
               if [ ! -f /kafka/data/meta.properties ]; then
                 /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/server.properties
               fi
-              # Start Kafka server with Confluent overrides
               exec /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/server.properties \
                 --override process.roles=$KAFKA_PROCESS_ROLES \
                 --override node.id=$KAFKA_NODE_ID \
