--- a/charts/coredns/templates/configmap.yaml
+++ b/charts/coredns/templates/configmap.yaml
@@ -5,5 +5,5 @@ metadata:
 data:
   Corefile: {{ .Values.corefile | nindent 4 }}
 {{- range $key, $value := .Values.zoneFiles }}
-  {{ $key }}: {{ $value | nindent 4 }}
+  {{ $key }}: {{ $value | quote }}
 {{- end }}
