--- a/charts/coredns/values.yaml
+++ b/charts/coredns/values.yaml
@@ -1,10 +1,7 @@
-# Количество реплик (1 для теста, 2+ для продакшн)
 replicas: 1
 
-# Образ CoreDNS
 image: coredns/coredns:1.11.1
 
-# Порты: DNS (53), метрики, health/ready проверки
 ports:
   dns: 53
   dnsNodePort: 30053
@@ -13,7 +10,6 @@ ports:
   health: 8080
   ready: 8181
 
-# Настройки персистентного хранилища (аналог Redis)
 persistence:
   enabled: true
   storageClass: local-storage
@@ -21,9 +17,8 @@ persistence:
     - ReadWriteOnce
   size: 1Gi
   localPath: /mnt/disks/coredns
-  nodeAffinityHostname: k8s-main  # Замени на имя твоего узла
+  nodeAffinityHostname: k8s-main
 
-# Ресурсы для CoreDNS
 resources:
   coredns:
     limits:
@@ -33,36 +28,32 @@ resources:
       cpu: "100m"
       memory: "128Mi"
 
-# Corefile: конфигурация CoreDNS (authoritative для example.com)
 corefile: |
   .:{{ .Values.ports.dns }} {
       errors
       health :{{ .Values.ports.health }}
       ready :{{ .Values.ports.ready }}
       prometheus 0.0.0.0:{{ .Values.ports.metrics }}
-      file /etc/coredns/zones/db.example.com example.com
+      file /etc/coredns/zones/db.velesoft.ru velesoft.ru
       log
       loop
   }
 
-# Zone-файл для твоего домена
 zoneFiles:
-  db.example.com: |
-    $ORIGIN example.com.
-    @ 3600 IN SOA ns1.example.com. admin.example.com. (
+  db.velesoft.ru: |
+    $ORIGIN velesoft.ru.
+    @ 3600 IN SOA ns1.velesoft.ru. admin.velesoft.ru. (
       2025100601  ; Serial (обновляй при изменениях: YYYYMMDDNN)
       7200         ; Refresh
       3600         ; Retry
       1209600      ; Expire
       3600 )       ; Minimum TTL
 
-    @ 3600 IN NS ns1.example.com.
-    @ 3600 IN NS ns2.example.com.  # Для второй реплики, если replicas > 1
+    @ 3600 IN NS ns1.velesoft.ru.
 
-    ns1 3600 IN A YOUR_EXTERNAL_IP  ; Замени на IP сервиса (kubectl get svc)
-    ns2 3600 IN A YOUR_SECOND_IP    ; Для второй реплики, если есть
+    ns1 3600 IN A 37.252.19.157  ; Замени на IP сервиса (kubectl get svc)
 
     ; Пример записей для твоего домена
-    www 3600 IN A YOUR_EXTERNAL_IP
-    mail 3600 IN MX 10 mail.example.com.
-    mail 3600 IN A YOUR_EXTERNAL_IP
+    www 3600 IN A 37.252.19.157
+    mail 3600 IN MX 10 mail.velesoft.ru.
+    mail 3600 IN A 37.252.19.157
