--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -66,7 +66,9 @@ spec:
                   name: kafka-config
                   key: clusterId
             - name: KAFKA_NODE_ID
-              value: "{{`{{ .Pod.Name | replace \"kafka-\" \"\" }}`}}"
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.labels['apps.kubernetes.io/pod-index']
             - name: KAFKA_PROCESS_ROLES
               value: "broker,controller"
             - name: KAFKA_LISTENERS
