--- a/charts/kafka/templates/configmap.yaml
+++ b/charts/kafka/templates/configmap.yaml
@@ -7,4 +7,7 @@ metadata:
 data:
   clusterId: {{ .Values.cluster.id | quote }}
   log4j2.properties: |
-    {{- .Values.log4j.config | nindent 4 }}
+    log4j.rootLogger=INFO, stdout
+    log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+    log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+    log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
