--- a/charts/kafka/Chart.yaml
+++ b/charts/kafka/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: kafka
-description: A Helm chart for Kafka in KRaft mode
+description: A minimal Helm chart for Kafka in KRaft mode
 version: 0.1.0
 appVersion: "3.8.0"
