--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -56,7 +56,7 @@ spec:
             - name: KAFKA_LISTENERS
               value: "PLAINTEXT://0.0.0.0:{{ .Values.ports.broker }},CONTROLLER://0.0.0.0:{{ .Values.ports.controller }}"
             - name: KAFKA_ADVERTISED_LISTENERS
-              value: "PLAINTEXT://{{`{{ .Pod.Name }}`}}.{{ .Values.cluster.domain }}:{{ .Values.ports.broker }}"
+              value: "PLAINTEXT://$(POD_NAME).{{ .Values.cluster.domain }}:{{ .Values.ports.broker }}"
             - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
               value: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
             - name: KAFKA_INTER_BROKER_LISTENER_NAME
@@ -68,7 +68,7 @@ spec:
             - name: KAFKA_LOG_DIRS
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
-              value: "-Dlog4j2.configurationFile=file:/etc/kafka/log4j2.properties"
+              value: "-Dlog4j2.configurationFile=file:/etc/kafka/kafka.properties"
             - name: KAFKA_PORT
               value: ""
           resources:
@@ -89,8 +89,8 @@ spec:
             - name: kafka-data
               mountPath: /kafka/data
             - name: kafka-config
-              mountPath: /etc/kafka/log4j2.properties
-              subPath: log4j2.properties
+              mountPath: /etc/kafka/kafka.properties
+              subPath: kafka.properties
           command: ["/bin/bash", "-c"]
           args:
             - |
