--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -68,7 +68,7 @@ spec:
             - name: KAFKA_LOG_DIRS
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
-              value: "-Dlog4j2.configurationFile=file:/etc/kafka/log4j2.properties"
+              value: "-Dlog4j2.configurationFile=file:/etc/confluent/docker/log4j2.properties"
             - name: KAFKA_PORT
               value: ""
           resources:
@@ -89,7 +89,7 @@ spec:
             - name: kafka-data
               mountPath: /kafka/data
             - name: kafka-config
-              mountPath: /etc/kafka/log4j2.properties
+              mountPath: /etc/confluent/docker/log4j2.properties
               subPath: log4j2.properties
           command: ["/bin/bash", "-c"]
           args:
