--- a/charts/kafka/templates/configmap.yaml
+++ b/charts/kafka/templates/configmap.yaml
@@ -6,8 +6,10 @@ metadata:
     app: kafka
 data:
   clusterId: {{ .Values.cluster.id | quote }}
-  log4j2.properties: |
-    log4j.rootLogger=INFO, stdout
-    log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-    log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-    log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+  kafka.properties: |
+    name=stdout
+    appender=org.apache.log4j.ConsoleAppender
+    layout=org.apache.log4j.PatternLayout
+    layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+    rootLogger.level=INFO
+    rootLogger.appenderNames=stdout
