--- a/charts/kafka/templates/configmap.yaml
+++ b/charts/kafka/templates/configmap.yaml
@@ -7,11 +7,16 @@ metadata:
 data:
   clusterId: {{ .Values.cluster.id | quote }}
   log4j2.properties: |
-    appenders=console
-    appender.console.type=Console
-    appender.console.name=STDOUT
-    appender.console.layout.type=PatternLayout
-    appender.console.layout.pattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-    rootLogger.level=INFO
-    rootLogger.appenderRefs=console
-    rootLogger.appenderRef.console.ref=STDOUT
+    <?xml version="1.0" encoding="UTF-8"?>
+    <Configuration status="WARN">
+      <Appenders>
+        <Console name="STDOUT" target="SYSTEM_OUT">
+          <PatternLayout pattern="%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n"/>
+        </Console>
+      </Appenders>
+      <Loggers>
+        <Root level="INFO">
+          <AppenderRef ref="STDOUT"/>
+        </Root>
+      </Loggers>
+    </Configuration>
