--- a/charts/kafka/templates/configmap.yaml
+++ b/charts/kafka/templates/configmap.yaml
@@ -6,17 +6,17 @@ metadata:
     app: kafka
 data:
   clusterId: {{ .Values.cluster.id | quote }}
-  log4j2.properties: |
+  log4j2.xml: |
     <?xml version="1.0" encoding="UTF-8"?>
     <Configuration status="WARN">
-      <Appenders>
-        <Console name="STDOUT" target="SYSTEM_OUT">
-          <PatternLayout pattern="%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n"/>
-        </Console>
-      </Appenders>
-      <Loggers>
-        <Root level="INFO">
-          <AppenderRef ref="STDOUT"/>
-        </Root>
-      </Loggers>
+        <Appenders>
+            <Console name="STDOUT" target="SYSTEM_OUT">
+                <PatternLayout pattern="%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n"/>
+            </Console>
+        </Appenders>
+        <Loggers>
+            <Root level="INFO">
+                <AppenderRef ref="STDOUT"/>
+            </Root>
+        </Loggers>
     </Configuration>
