--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -68,9 +68,9 @@ spec:
             - name: KAFKA_LOG_DIRS
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
-              value: "-Dlog4j2.configurationFile=file:/etc/kafka/log4j2.properties"
+              value: "-Dlog4j2.configurationFile=file:/etc/confluent/docker/log4j2.xml"
             - name: LOG4J_CONFIGURATION_FILE
-              value: "file:/etc/kafka/log4j2.properties"
+              value: "file:/etc/confluent/docker/log4j2.xml"
             - name: KAFKA_PORT
               value: ""
           resources:
@@ -91,8 +91,8 @@ spec:
             - name: kafka-data
               mountPath: /kafka/data
             - name: kafka-config
-              mountPath: /etc/kafka/log4j2.properties
-              subPath: log4j2.properties
+              mountPath: /etc/confluent/docker/log4j2.xml
+              subPath: log4j2.xml
           command: ["/bin/bash", "-c"]
           args:
             - |
