--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -68,11 +68,7 @@ spec:
             - name: KAFKA_LOG_DIRS
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
-              value: "-Dlog4j2.configurationFile=file:/etc/confluent/docker/log4j2.xml"
-            - name: LOG4J_CONFIGURATION_FILE
-              value: "file:/etc/confluent/docker/log4j2.xml"
-            - name: KAFKA_PORT
-              value: ""
+              value: "-Dlog4j.configuration=file:/etc/kafka/log4j2.properties"
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           readinessProbe:
@@ -91,8 +87,8 @@ spec:
             - name: kafka-data
               mountPath: /kafka/data
             - name: kafka-config
-              mountPath: /etc/confluent/docker/log4j2.xml
-              subPath: log4j2.xml
+              mountPath: /etc/kafka/log4j2.properties
+              subPath: log4j2.properties
           command: ["/bin/bash", "-c"]
           args:
             - |
