--- a/charts/kafka/templates/configmap.yaml
+++ b/charts/kafka/templates/configmap.yaml
@@ -7,7 +7,7 @@ metadata:
 data:
   clusterId: {{ .Values.cluster.id | quote }}
   log4j2.properties: |
-    status = warn
+    status = WARN
     name = KafkaServer
     appenders = console
     appender.console.type = Console
@@ -17,3 +17,8 @@ data:
     rootLogger.level = INFO
     rootLogger.appenderRefs = console
     rootLogger.appenderRef.console.ref = STDOUT
+    logger.kafka.name = kafka
+    logger.kafka.level = INFO
+    logger.kafka.additivity = false
+    logger.kafka.appenderRefs = console
+    logger.kafka.appenderRef.console.ref = STDOUT
