--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -68,7 +68,7 @@ spec:
             - name: KAFKA_LOG_DIRS
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
-              value: "-Dlog4j.configuration=file:/etc/kafka/log4j2.properties"
+              value: "-Dlog4j2.configurationFile=file:/etc/kafka/log4j2.properties"
             - name: KAFKA_PORT
               value: ""
           resources:
