--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -25,10 +25,10 @@ global:
   edition: ce
   hosts:
     domain: "gitlab.velesoft.ru"
-    https: false  # Отключаем HTTPS, так как используем NodePort и HTTP
-    nodeIp: "10.66.66.11"  # Замени на IP твоего узла k8s-main
+    https: true
+    nodeIp: "10.66.66.11"
   ingress:
-    enabled: false  # Отключаем Ingress, так как используем NodePort
+    enabled: true
     class: "nginx"
     annotations:
       kubernetes.io/ingress.class: nginx
@@ -69,4 +69,4 @@ initialRootPassword: "supersecret"
 service:
   type: NodePort
   port: 80
-  nodePort: 30088  # Внешний порт для доступа к GitLab
+  nodePort: 30088
