--- a/charts/gitlab/templates/deployment.yaml
+++ b/charts/gitlab/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           env:
             - name: GITLAB_OMNIBUS_CONFIG
               value: |
-                external_url 'https://{{ .Values.global.hosts.domain }}'
+                external_url 'http://{{ .Values.global.hosts.nodeIp }}:{{ .Values.service.nodePort }}'  # HTTP для NodePort
                 postgresql['enable'] = false
                 gitlab_rails['db_adapter'] = 'postgresql'
                 gitlab_rails['db_host'] = '{{ .Values.psql.host }}'
@@ -41,7 +41,7 @@ spec:
                   'provider' => 'AWS',
                   'endpoint' => 'http://{{ .Values.minio.host }}:{{ .Values.minio.port }}',
                   'aws_access_key_id' => '{{ .Values.minio.accessKey }}',
-                  'aws_secret_access_key' => '{{ .Values.minio.secretKey }}',
+                  'aws_secret_access_key' = '{{ .Values.minio.secretKey }}',
                   'path_style' => true
                 }
                 gitlab_rails['artifacts_object_store_enabled'] = true
@@ -49,7 +49,7 @@ spec:
                   'provider' => 'AWS',
                   'endpoint' => 'http://{{ .Values.minio.host }}:{{ .Values.minio.port }}',
                   'aws_access_key_id' => '{{ .Values.minio.accessKey }}',
-                  'aws_secret_access_key' => '{{ .Values.minio.secretKey }}',
+                  'aws_secret_access_key' = '{{ .Values.minio.secretKey }}',
                   'path_style' => true
                 }
                 gitlab_rails['initial_root_password'] = '{{ .Values.initialRootPassword }}'
