--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -25,10 +25,10 @@ global:
   edition: ce
   hosts:
     domain: "gitlab.velesoft.ru"
-    https: true
+    https: false
     nodeIp: "10.66.66.11"
   ingress:
-    enabled: true
+    enabled: false
     class: "nginx"
     annotations:
       kubernetes.io/ingress.class: nginx
