--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -33,7 +33,7 @@ global:
     annotations:
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
-      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/ssl-redirect: "flase"
       nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
   appConfig:
     objectStorage:
