--- a/charts/gitlab/templates/deployment.yaml
+++ b/charts/gitlab/templates/deployment.yaml
@@ -16,6 +16,18 @@ spec:
         kubernetes.io/hostname: k8s-main
       containers:
         - name: gitlab
+          readinessProbe:
+            httpGet:
+              path: /users/sign_in
+              port: 80
+            initialDelaySeconds: 120
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /users/sign_in
+              port: 80
+            initialDelaySeconds: 180
+            periodSeconds: 20
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
