--- a/charts/gitlab/templates/service.yaml
+++ b/charts/gitlab/templates/service.yaml
@@ -2,12 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gitlab
+  annotations:
+    kubernetes.io/description: "Service for GitLab with NodePort"
 spec:
-  type: {{ .Values.service.type }}
+  type: NodePort
   ports:
-    - port: {{ .Values.service.port }}
+    - port: 80
       targetPort: 80
-      nodePort: {{ .Values.service.nodePort }}
+      nodePort: 30088
       protocol: TCP
       name: http
   selector:
